--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Demo Word Frequency Counter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta charset="utf-8"/> 
-    <script type="text/javascript" src="lib.js"></script>
+    <script type="text/javascript" src="freqcount-min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <style>
       body{
@@ -58,7 +58,7 @@
 
     </ul>
 
-    <a href="http://github.com/hereismass/">Check on github</a>
+    <a href="http://github.com/hereismass/freqcount">Check on github</a>
 
     <script type="text/javascript">
       $('#send').click(function(){
